--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
-torch>=1.9.0
-tensorflow>=2.0.0
+fastapi==0.65.0
+#torch>=1.9.0
+uvicorn==0.13.4
+#tensorflow>=2.0.0
+tensorflow==2.9.1
 transformers>=4.4.0
 
